tree-sitter-rdf12-turtle/test/corpus/w3c-test-suite-rdf11-turtle.txt
===============
anonymous_blank_node_object
===============
<http://a.example/s> <http://a.example/p> [] .
---

(turtleDoc
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (ANON))))))

===============
anonymous_blank_node_subject
===============
[] <http://a.example/p> <http://a.example/o> .
---

(turtleDoc
  (statement
    (triples
      subject: (ANON)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF))))))

===============
bareword_a_predicate
===============
<http://a.example/s> a <http://a.example/o> .
---

(turtleDoc
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        (objectList
          object: (IRIREF))))))

===============
bareword_decimal
===============
<http://a.example/s> <http://a.example/p> 1.0 .
---

(turtleDoc
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (DECIMAL))))))

===============
bareword_double
===============
<http://a.example/s> <http://a.example/p> 1E0 .
---

(turtleDoc
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (DOUBLE))))))

===============
bareword_integer
===============
<http://a.example/s> <http://a.example/p> 1 .
---

(turtleDoc
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (INTEGER))))))

===============
blankNodePropertyList_as_object_containing_objectList_of_two_objects
===============
<http://a.example/s> <http://a.example/p> [ <http://a.example/p2> <http://a.example/o> ]
                                          , <http://a.example/o2> .
---

(turtleDoc
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (blankNodePropertyList
            (predicateObjectList
              predicate: (IRIREF)
              (objectList
                object: (IRIREF))))
          object: (IRIREF))))))

===============
blankNodePropertyList_as_object_containing_objectList
===============
<http://a.example/s> <http://a.example/p> [ <http://a.example/p2> <http://a.example/o>,<http://a.example/o2> ] .
---

(turtleDoc
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (blankNodePropertyList
            (predicateObjectList
              predicate: (IRIREF)
              (objectList
                object: (IRIREF)
                object: (IRIREF)))))))))

===============
blankNodePropertyList_as_object
===============
<http://a.example/s> <http://a.example/p> [ <http://a.example/p2> <http://a.example/o2> ] .
---

(turtleDoc
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (blankNodePropertyList
            (predicateObjectList
              predicate: (IRIREF)
              (objectList
                object: (IRIREF)))))))))

===============
blankNodePropertyList_as_subject
===============
[ <http://a.example/p> <http://a.example/o> ] <http://a.example/p2> <http://a.example/o2> .
---

(turtleDoc
  (statement
    (triples
      (blankNodePropertyList
        (predicateObjectList
          predicate: (IRIREF)
          (objectList
            object: (IRIREF))))
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF))))))

===============
blankNodePropertyList_containing_collection
===============
[ <http://a.example/p1> (1) ] .
---

(turtleDoc
  (statement
    (triples
      (blankNodePropertyList
        (predicateObjectList
          predicate: (IRIREF)
          (objectList
            object: (collection
              (INTEGER))))))))

===============
blankNodePropertyList_with_multiple_triples
===============
[ <http://a.example/p1> <http://a.example/o1> ; <http://a.example/p2> <http://a.example/o2> ] <http://a.example/p> <http://a.example/o> .
---

(turtleDoc
  (statement
    (triples
      (blankNodePropertyList
        (predicateObjectList
          predicate: (IRIREF)
          (objectList
            object: (IRIREF))
          predicate: (IRIREF)
          (objectList
            object: (IRIREF))))
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF))))))

===============
collection_object
===============
<http://a.example/s> <http://a.example/p> (1) .
---

(turtleDoc
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (collection
            (INTEGER)))))))

===============
collection_subject
===============
(1) <http://a.example/p> <http://a.example/o> .
---

(turtleDoc
  (statement
    (triples
      subject: (collection
        (INTEGER))
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF))))))

===============
comment_following_localName
===============
@prefix p: <http://a.example/> .
<http://a.example/s> <http://a.example/p> p:o#comment
.
---

(turtleDoc
  (statement
    (prefix
      prefix_label: (PNAME_NS)
      iri: (IRIREF)))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (PrefixedName))))
    (comment)))

===============
comment_following_PNAME_NS
===============
@prefix p: <http://a.example/> .
<http://a.example/s> <http://a.example/p> p:#comment
.
---

(turtleDoc
  (statement
    (prefix
      prefix_label: (PNAME_NS)
      iri: (IRIREF)))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (PrefixedName))))
    (comment)))

===============
default_namespace_IRI
===============
@prefix : <http://a.example/>.
:s <http://a.example/p> <http://a.example/o> .
---

(turtleDoc
  (statement
    (prefix
      prefix_label: (PNAME_NS)
      iri: (IRIREF)))
  (statement
    (triples
      subject: (PrefixedName)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF))))))

===============
double_lower_case_e
===============
<http://a.example/s> <http://a.example/p> 1e0 .
---

(turtleDoc
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (DOUBLE))))))

===============
empty_collection
===============
<http://a.example/s> <http://a.example/p> () .
---

(turtleDoc
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (collection))))))

===============
first
===============
<http://a.example/s> <http://a.example/p> ((1) 2) .
---

(turtleDoc
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (collection
            (collection
              (INTEGER))
            (INTEGER)))))))

===============
HYPHEN_MINUS_in_localName
===============
@prefix p: <http://a.example/>.
p:s- <http://a.example/p> <http://a.example/o> .
---

(turtleDoc
  (statement
    (prefix
      prefix_label: (PNAME_NS)
      iri: (IRIREF)))
  (statement
    (triples
      subject: (PrefixedName)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF))))))

===============
IRIREF_datatype
===============
<http://a.example/s> <http://a.example/p> "1"^^<http://www.w3.org/2001/XMLSchema#integer> .
---

(turtleDoc
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (RDFLiteral
            string: (STRING_LITERAL_QUOTE)
            datatype_iri: (IRIREF)))))))

===============
IRI-resolution-01
===============
@base <http://a/bb/ccc/d;p?q>.

<urn:ex:s001> <urn:ex:p> <g:h>.
<urn:ex:s002> <urn:ex:p> <g>.
<urn:ex:s003> <urn:ex:p> <./g>.
<urn:ex:s004> <urn:ex:p> <g/>.
<urn:ex:s005> <urn:ex:p> </g>.
<urn:ex:s006> <urn:ex:p> <//g>.
<urn:ex:s007> <urn:ex:p> <?y>.
<urn:ex:s008> <urn:ex:p> <g?y>.
<urn:ex:s009> <urn:ex:p> <#s>.
<urn:ex:s010> <urn:ex:p> <g#s>.
<urn:ex:s011> <urn:ex:p> <g?y#s>.
<urn:ex:s012> <urn:ex:p> <;x>.
<urn:ex:s013> <urn:ex:p> <g;x>.
<urn:ex:s014> <urn:ex:p> <g;x?y#s>.
<urn:ex:s015> <urn:ex:p> <>.
<urn:ex:s016> <urn:ex:p> <.>.
<urn:ex:s017> <urn:ex:p> <./>.
<urn:ex:s018> <urn:ex:p> <..>.
<urn:ex:s019> <urn:ex:p> <../>.
<urn:ex:s020> <urn:ex:p> <../g>.
<urn:ex:s021> <urn:ex:p> <../..>.
<urn:ex:s022> <urn:ex:p> <../../>.
<urn:ex:s023> <urn:ex:p> <../../g>.

<urn:ex:s024> <urn:ex:p> <../../../g>.
<urn:ex:s025> <urn:ex:p> <../../../../g>.
<urn:ex:s026> <urn:ex:p> </./g>.
<urn:ex:s027> <urn:ex:p> </../g>.
<urn:ex:s028> <urn:ex:p> <g.>.
<urn:ex:s029> <urn:ex:p> <.g>.
<urn:ex:s030> <urn:ex:p> <g..>.
<urn:ex:s031> <urn:ex:p> <..g>.
<urn:ex:s032> <urn:ex:p> <./../g>.
<urn:ex:s033> <urn:ex:p> <./g/.>.
<urn:ex:s034> <urn:ex:p> <g/./h>.
<urn:ex:s035> <urn:ex:p> <g/../h>.
<urn:ex:s036> <urn:ex:p> <g;x=1/./y>.
<urn:ex:s037> <urn:ex:p> <g;x=1/../y>.
<urn:ex:s038> <urn:ex:p> <g?y/./x>.
<urn:ex:s039> <urn:ex:p> <g?y/../x>.
<urn:ex:s040> <urn:ex:p> <g#s/./x>.
<urn:ex:s041> <urn:ex:p> <g#s/../x>.

## Two answers:
## RDF 3986 section 5.2.2
## Strict resolving: <http:g>
## Non-strict resolving: <http://a/bb/ccc/g>

## <urn:ex:s042> <urn:ex:p> <http:g>.
---

(turtleDoc
  (statement
    (base
      iri: (IRIREF)))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (comment)
  (comment)
  (comment)
  (comment)
  (comment))

===============
IRI-resolution-02
===============
@base <http://a/bb/ccc/d/>.

<urn:ex:s043> <urn:ex:p> <g:h>.
<urn:ex:s044> <urn:ex:p> <g>.
<urn:ex:s045> <urn:ex:p> <./g>.
<urn:ex:s046> <urn:ex:p> <g/>.
<urn:ex:s047> <urn:ex:p> </g>.
<urn:ex:s048> <urn:ex:p> <//g>.
<urn:ex:s049> <urn:ex:p> <?y>.
<urn:ex:s050> <urn:ex:p> <g?y>.
<urn:ex:s051> <urn:ex:p> <#s>.
<urn:ex:s052> <urn:ex:p> <g#s>.
<urn:ex:s053> <urn:ex:p> <g?y#s>.
<urn:ex:s054> <urn:ex:p> <;x>.
<urn:ex:s055> <urn:ex:p> <g;x>.
<urn:ex:s056> <urn:ex:p> <g;x?y#s>.
<urn:ex:s057> <urn:ex:p> <>.
<urn:ex:s058> <urn:ex:p> <.>.
<urn:ex:s059> <urn:ex:p> <./>.
<urn:ex:s060> <urn:ex:p> <..>.
<urn:ex:s061> <urn:ex:p> <../>.
<urn:ex:s062> <urn:ex:p> <../g>.
<urn:ex:s063> <urn:ex:p> <../..>.
<urn:ex:s064> <urn:ex:p> <../../>.
<urn:ex:s065> <urn:ex:p> <../../g>.

<urn:ex:s066> <urn:ex:p> <../../../g>.
<urn:ex:s067> <urn:ex:p> <../../../../g>.
<urn:ex:s068> <urn:ex:p> </./g>.
<urn:ex:s069> <urn:ex:p> </../g>.
<urn:ex:s070> <urn:ex:p> <g.>.
<urn:ex:s071> <urn:ex:p> <.g>.
<urn:ex:s072> <urn:ex:p> <g..>.
<urn:ex:s073> <urn:ex:p> <..g>.
<urn:ex:s074> <urn:ex:p> <./../g>.
<urn:ex:s075> <urn:ex:p> <./g/.>.
<urn:ex:s076> <urn:ex:p> <g/./h>.
<urn:ex:s077> <urn:ex:p> <g/../h>.
<urn:ex:s078> <urn:ex:p> <g;x=1/./y>.
<urn:ex:s079> <urn:ex:p> <g;x=1/../y>.
<urn:ex:s080> <urn:ex:p> <g?y/./x>.
<urn:ex:s081> <urn:ex:p> <g?y/../x>.
<urn:ex:s082> <urn:ex:p> <g#s/./x>.
<urn:ex:s083> <urn:ex:p> <g#s/../x>.

## Two answers:
## RDF 3986 section 5.2.2
## Strict resolving: <http:g>
## Non-strict resolving: <http://a/bb/ccc/g>

## <urn:ex:s084> <urn:ex:p> <http:g>.
---

(turtleDoc
  (statement
    (base
      iri: (IRIREF)))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (statement
    (triples
      subject: (IRIREF)
      (predicateObjectList
        predicate: (IRIREF)
        (objectList
          object: (IRIREF)))))
  (comment)
  (comment)
  (comment)
  (comment)
  (comment))

===============
IRI-resolution-07
===============
@base <file:///a/bb/ccc/d;p?q>.

<urn:ex:s253> <urn:ex:p> <g:h>.
<urn:ex:s254> <urn:ex:p> <g>.
<urn:ex:s255> <urn:ex:p> <./g>.
<urn:ex:s256> <urn:ex:p> <g/>.
<urn:ex:s257> <urn:ex:p> </g>.
<urn:ex:s258> <urn:ex:p> <//g>.
<urn:ex:s259> <urn:ex:p> <?y>.
<urn:ex:s260> <urn:ex:p> <g?y>.
<urn:ex:s261> <urn:ex:p> <#s>.
<urn:ex:s262> <urn:ex:p> <g#s>.
<urn:ex:s263> <urn:ex:p> <g?y#s>.
<urn:ex:s264> <urn:ex:p> <;x>.
<urn:ex:s265> <urn:ex:p> <g;x>.
<urn:ex:s266> <urn:ex:p> <g;x?y#s>.
<urn:ex:s267> <urn:ex:p> <>.
<urn:ex:s268> <urn:ex:p> <.>.
<urn:ex:s269> <urn:ex:p> <./>.
<urn:ex:s270> <urn:ex:p> <..>.
<urn:ex:s271> <urn:ex:p> <../>.
<urn:ex:s272> <urn:ex:p> <../g>.
<urn:ex:s273> <urn:ex:p> <../..>.
<urn:ex:s274> <urn:ex:p> <../../>.
<urn:ex:s275> <urn:ex:p> <../../g>.

<urn:ex:s276> <urn:ex:p> <../../../g>.
<urn:ex:s277> <urn:ex:p> <../../../../g>.
<urn:ex:s278> <urn:ex:p> </./g>.
<urn:ex:s279> <urn:ex:p> </../g>.
<urn:ex:s280> <urn:ex:p> <g.>.
<urn:ex:s281> <urn:ex:p> <.g>.
<urn:ex:s282> <urn:ex:p> <g..>.
<urn:ex:s283> <urn:ex:p> <..g>.
<urn:ex:s284> <urn:ex:p> <./../g>.
<urn:ex:s285> <urn:ex:p> <./g/.>.
<urn:ex:s286> <urn:ex:p> <g/./h>.
<urn:ex:s287> <urn:ex:p> <g/../h>.
<urn:ex:s288> <urn:ex:p> <g;x=1/./y>.
<urn:ex:s289> <urn:ex:p> <g;x=1/../y>.
<urn:ex:s290> <urn:ex:p> <g?y/./x>.
<urn:ex:s291> <urn:ex:p> <g?y/../x>.
<urn:ex:s292> <urn:ex:p> <g#s/./x>.
<urn:ex:s293> <urn:ex:p> <g#s/../x>.
<urn:ex:s294> <urn:ex:p> <http:g>.
---
